feat: add audit retention, API response wrapper, input sanitization
- Add audit log retention policy (12 months default) with scheduled cleanup
- Add deleteOldLogs, findByTimestampBefore methods to AuditLogRepository
- Create ApiResponseWrapper DTO for standardized API responses
- Add PageInfo helper for pagination metadata
- Create InputSanitizer utility with OWASP Encoder
- Add XSS, SQL injection detection patterns
- Add Thai validation (national ID, phone, names)
- Add OWASP Encoder dependency to pom.xml
- Add comprehensive unit tests for InputSanitizer
- Fix EmailService to use getCreatedAt() for loan dates
- Fix deprecated Locale constructor (use Locale.of)